--- a/kubernetes/backend.yaml
+++ b/kubernetes/backend.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: flask-backend
-        image: backend:latest
+        image: amandevsecops/demo-bckend
         imagePullPolicy: Never
         ports:
         - containerPort: 5000
